SP Screen Production/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Branch__c</fullName>
        <formula>Text(Owner.Divison__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Date__c</fullName>
        <description>Appointment Date</description>
        <label>Appointment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appointment_Time__c</fullName>
        <label>Appointment Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BNE:Eastern Suburbs</fullName>
                </value>
                <value>
                    <fullName>BNE:Inner Suburbs</fullName>
                </value>
                <value>
                    <fullName>BNE:Ipswich Rural</fullName>
                </value>
                <value>
                    <fullName>BNE:Logan City</fullName>
                </value>
                <value>
                    <fullName>BNE:Moreton Bay - Urban Region</fullName>
                </value>
                <value>
                    <fullName>BNE:Northern Suburbs</fullName>
                </value>
                <value>
                    <fullName>BNE:Redland City</fullName>
                </value>
                <value>
                    <fullName>BNE:Rural Region</fullName>
                </value>
                <value>
                    <fullName>BNE:Southern Suburbs</fullName>
                </value>
                <value>
                    <fullName>BNE:Western Suburbs</fullName>
                </value>
                <value>
                    <fullName>CCN:Central Coast</fullName>
                </value>
                <value>
                    <fullName>CCN:Hunter Region</fullName>
                </value>
                <value>
                    <fullName>CCN:Lake Macquarie</fullName>
                </value>
                <value>
                    <fullName>CCN:Newcastle Region</fullName>
                </value>
                <value>
                    <fullName>CCN:Port Stephens</fullName>
                </value>
                <value>
                    <fullName>COFFS:Harbour Central</fullName>
                </value>
                <value>
                    <fullName>COFFS:North</fullName>
                </value>
                <value>
                    <fullName>COFFS:North West</fullName>
                </value>
                <value>
                    <fullName>COFFS:South</fullName>
                </value>
                <value>
                    <fullName>COFFS:South West</fullName>
                </value>
                <value>
                    <fullName>SYD:Canterbury/Bankstown Area</fullName>
                </value>
                <value>
                    <fullName>SYD:Eastern Suburbs</fullName>
                </value>
                <value>
                    <fullName>SYD:Greater Western Sydney</fullName>
                </value>
                <value>
                    <fullName>SYD:Hills Area</fullName>
                </value>
                <value>
                    <fullName>SYD:Illawarra</fullName>
                </value>
                <value>
                    <fullName>SYD:Inner City</fullName>
                </value>
                <value>
                    <fullName>SYD:Inner West</fullName>
                </value>
                <value>
                    <fullName>SYD:North Shore</fullName>
                </value>
                <value>
                    <fullName>SYD:North West Sydney</fullName>
                </value>
                <value>
                    <fullName>SYD:Parramatta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Ready_For_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Ready For Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referred_By__c</fullName>
        <label>Referred By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>